--- a/index.html
+++ b/index.html
@@ -26,72 +26,78 @@
             <h1>
                 FAQ
             </h1>
-            <div class="middle-div">
+            <div class="middle-container">
                 <div class="question">
-                    <a>
-                        How many team members can I invite?
-                    </a>
-                    <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd" />
-                    </svg>
-                </div>
-                <hr>
-                <div class="question">
-                    <a>
-                        What is the maximum file upload size?
-                    </a>
-                    <div>
-                        <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none"
-                                fill-rule="evenodd" />
-                        </svg>
+                    <div class="question-div">
+                        <h4 class="asked">
+                            How many team members can I invite?
+                        </h4>
+                        <img class="arrow-bottom" src="./images/icon-arrow-down.svg" alt="arrow">
                     </div>
+                        <p class="hidden">
+                        You can invite up to 2 additional users on the Free plan. There is no limit on
+                        team members for the Premium plan.
+                        </p>
+                        <hr>
                 </div>
-                <p id="info">
-                    No more than 2GB. All files in your account
-                    must fit your allotted storage space.
-                </p>
-                <hr>
-                <div class="question">
-                    <a>
-                        How do I reset my password?
-                    </a>
-                    <div>
-                        <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none"
-                                fill-rule="evenodd" />
-                        </svg>
-                    </div>
-                </div>
-                <hr>
-                <div class="question">
-                    <a>
-                        Can I cancel my subscription?
-                    </a>
-                    <div>
-                        <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none"
-                                fill-rule="evenodd" />
-                        </svg>
-                    </div>
-                </div>
-                <hr>
-                <div class="question">
-                    <a>
-                        Do you provide additional support?
-                    </a>
-                    <div>
-                        <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none"
-                                fill-rule="evenodd" />
-                        </svg>
-                    </div>
-                </div>
-                <hr>
-            </div>
 
+                <div class="question">
+                    <div class="question-div">
+                        <h4 class="asked">
+                            What is the maximum file upload size?
+                        </h4>
+                        <img class="arrow-bottom" src="./images/icon-arrow-down.svg" alt="arrow">
+                    </div>
+                        <p class="hidden">
+                        No more than 2GB. All files in your account must fit your allotted storage space.
+                        </p>
+                        <hr>
+                </div>
+
+                <div class="question">
+                    <div class="question-div">
+                        <h4 class="asked">
+                            How do I reset my password?
+                        </h4>
+                        <img class="arrow-bottom" src="./images/icon-arrow-down.svg" alt="arrow">
+                    </div>
+                        <p class="hidden">
+                       Click “Forgot password” from the login page or “Change password” from your profile page.
+                        A reset link will be emailed to you.
+                        </p>
+                        <hr>
+                </div>
+
+                <div class="question">
+                    <div class="question-div">
+                        <h4 class="asked">
+                            Can I cancel my subscription?
+                        </h4>
+                        <img class="arrow-bottom" src="./images/icon-arrow-down.svg" alt="arrow">
+                    </div>
+                        <p class="hidden">
+                        Yes! Send us a message and we’ll process your request no questions asked.
+                        </p>
+                        <hr>
+                </div>
+
+                <div class="question">
+                    <div class="question-div">
+                        <h4 class="asked">
+                            Do you provide additional support?
+                        </h4>
+                        <img class="arrow-bottom" src="./images/icon-arrow-down.svg" alt="arrow">
+                    </div>
+                        <p class="hidden">      
+                        Chat and email support is available 24/7. Phone lines are open during normal business hours.
+                        </p>
+                        <hr>
+                </div>
+                
+            </div>
         </div>
     </main>
+    <script src="./index.js"></script>
 </body>
 
 </html>
